2007-07-06  Alan McGovern  <amcgovern@novell.com>

	* Uri.cs : The URI string should be whitespace trimmed before
	parsing. The original string is untouched. Fixes #81960.

2007-07-06  Atsushi Enomoto  <atsushi@ximian.com>

	* UriIdnScope.cs : new file (for net_2_1 profile).

2007-06-30  Miguel de Icaza  <miguel@novell.com>

	* Uri.cs (GetLeftPart): If the URI is relative this method throws
	InvalidOperationException. 

	(ToString): do not use GetLeftPart here, instead escape the path. 

	(Parse): For relative uris, keep the string as the path.

2007-06-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* Uri.cs: Canonicalize is only obsolete from 2.0 onward. Fixed line
	endings.

2007-04-18  Igor Zelmanovich  <igorz@mainsoft.com>

	* Uri.cs: added MonoNotSupported attributes.

2007-04-16  Atsushi Enomoto  <atsushi@ximian.com>

	* Uri.cs : in Uri(baseUri,relativeUri,noEscape), relativeUri could
	  contain a URI scheme. In such cases the relativeUri could be still
	  relative (i.e. not always equivalent to absolute). Fixed bug #81382.

2007-03-05  Peter Dettman  <peter.dettman@iinet.net.au>

	* Uri.cs: This patch straightens out Equals/GetHashCode for the
	Uri class: 

	- GetHashCode gives sensible values for relative Uri's.
	- Uri's that compare equal will give same hashcode.  
	- operator == now uses Equals.

	All existing tests still pass, and I have added some extra test
	cases specifically for Equals/GetHashCode on relative Uri's
	(included in patch).

2007-01-22  Miguel de Icaza  <miguel@novell.com>

	* Uri.cs (MakeRelativeUri): implement, copy most of the code from
	MakeRelative. 
	
	(EscapeUriString, EscapeDataString): Implement stuff
	needed by apps in Moma.

2006-12-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Uri.cs: implemented UnescapeDataString method

2006-09-28  Andrew Skiba  <andrews@mainsoft.com>

	* UriParser.cs: TARGET_JVM
	* UriFormatException.cs: MonoTODO

2006-08-01  Atsushi Enomoto  <atsushi@ximian.com>
